feat: add spring boot and enpoint for getting all events